--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "forkify",
   "version": "1.0.0",
   "description": "Recipe Application",
+  "default": "index.html",
   "scripts": {
-    "start": "cross-env BROWSER='chrome' parcel index.html",
-    "build": "parcel build index.html"
+    "start": "parcel index.html",
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Van Vien Dong",
   "license": "ISC",
