--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
-    "parcel": "^2.7.0"
+    "parcel": "^2.0.0-beta.1",
+    "sass": "^1.26.10"
   },
   "dependencies": {
-    "core-js": "^3.25.0",
-    "cross-env": "^7.0.3",
-    "fractional": "^1.0.0",
-    "regenerator-runtime": "^0.13.9"
+    "core-js": "^3.6.5",
+    "fraction.js": "^4.2.0",
+    "regenerator-runtime": "^0.13.7"
   }
 }
